completed using all CSS selectors. Submission Of CSS Assignments.

--- a/All Assignments/CSS Assignments/company_home.html
+++ b/All Assignments/CSS Assignments/company_home.html
@@ -45,7 +45,7 @@
 			
 			<h6 class="pastoral">Greetings from GORZON SOLUTIONS PVT. LTD </h6>
 
-			
+
 
 </td>
 </tr>	
@@ -67,7 +67,7 @@
 
 			<p>If you select our coampny, you will receive the message <samp>You will get EASY SOLUTION for EASY LIFE</samp>.</p>
 			
-			<p class="center1" >Here is a quote from our memodendurum:</p>
+			<p class="center1" >Here is a quote from our memodendurum:...</p>
 			
 			<blockquote class="center1">Mission - is to make technology an asset for businesses which will deliver long-term commercial benefits through sate-of-the-art technology, <em>really</em> improved IT efficiency, business profitability innovations to make a positive differences in businesses</blockquote>
 
