--- a/HTML5Application/company/company_dashboard.html
+++ b/HTML5Application/company/company_dashboard.html
@@ -57,17 +57,14 @@
 
 <td>
 <fieldset>
-	<legend>Trainee Related Features</legend>
+	<legend>Other Features</legend>
 	
-	<div><a href="a.html"><label>Exam Result Reports</label></a></div>
-	<div><a href="a.html"><label>Attendance Records</label></a></div>
-	<div><a href="a.html"><label>Personal Resume Profiles</label></a></div>
-	<div><a href="a.html"><label>Send Appointment Letter </label></a></div>
-	<div><a href="a.html"><label>Performance Summery Report</label></a></div>
-	<div><a href="a.html"><label>Merit List</label></a></div>
-	<div><a href="a.html"><label>Recruited FTFL’s Attendance Report </label></a></div>
-	<div><a href="a.html"><label>Rcruited FTFL’s Monthly Progress Report</label></a></div>
-	<div><a href="a.html"><label>Recruited FTFL’s Stipend</label></a></div>
+	<div><a href="a.html"><label>Summary Report Of the Courses</label></a></div>
+	<div><a href="a.html"><label>Notice Board</label></a></div>
+	<div><a href="a.html"><label>Job Vacency Board</label></a></div>
+	<div><a href="a.html"><label>Post My Human Resouces Demand</label></a></div>
+	<div><a href="a.html"><label>Contact With The Administrators </label></a></div>
+
 	
 </fieldset>	
 </td>
