--- a/HTML5Application/company/company_dashboard.html
+++ b/HTML5Application/company/company_dashboard.html
@@ -19,14 +19,14 @@
 <table style= "float:right; font-size:20px" border="1" >
 <tr>
 <td>
-<a href="a.html" ><label>COMPANY PROFILE SETTING</label></a><br>
+<a href="company_profile.html" ><label>COMPANY PROFILE SETTING</label></a><br>
 <a href="a.html"><label>SIGN OUT</label></a>
 </td>
 </tr>
 </table>
 <br>
 
-<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ALL THE FEATURES</h2>
+<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ALL THE FEATURES</h2>
 
 
 <table class="center">
