Complete Vacency page

--- a/HTML5Application/company/company_dashboard.html
+++ b/HTML5Application/company/company_dashboard.html
@@ -61,7 +61,7 @@
 	
 	<div><a href="a.html"><label>Summary Report Of the Courses</label></a></div>
 	<div><a href="noticeboard.html"><label>Notice Board</label></a></div>
-	<div><a href="a.html"><label>Job Vacency Board</label></a></div>
+	<div><a href="vacency_board.html"><label>Job Vacency Board</label></a></div>
 	<div><a href="a.html"><label>Post My Human Resouces Demand</label></a></div>
 	<div><a href="a.html"><label>Contact With The Administrators </label></a></div>
 
