exam result report page

--- a/HTML5Application/company/company_dashboard.html
+++ b/HTML5Application/company/company_dashboard.html
@@ -39,7 +39,7 @@
 <fieldset>
 	<legend>Trainee Related Features</legend>
 	
-	<div><a href="a.html"><label>Exam Result Reports</label></a></div>
+	<div><a href="exam_result.html"><label>Exam Result Reports</label></a></div>
 	<div><a href="a.html"><label>Attendance Records</label></a></div>
 	<div><a href="a.html"><label>Personal Resume Profiles</label></a></div>
 	<div><a href="a.html"><label>Send Appointment Letter </label></a></div>
