attendance report complete

--- a/HTML5Application/company/noticeboard.html
+++ b/HTML5Application/company/noticeboard.html
@@ -38,7 +38,7 @@
 
 <!-- WHY SHOULD WE SELECT YOU -->
 <tr>
-<td> NEWSES </td>
+<td> NEWES</td>
 <td>
 <textarea rows="10" cols="30" name="textArea" placeholder="This Month
 
