--- a/HTML5Application/company/company_dashboard.html
+++ b/HTML5Application/company/company_dashboard.html
@@ -40,7 +40,7 @@
 	<legend>Trainee Related Features</legend>
 	
 	<div><a href="exam_result.html"><label>Exam Result Reports</label></a></div>
-	<div><a href="a.html"><label>Attendance Records</label></a></div>
+	<div><a href="attemdance_report.html"><label>Attendance Records</label></a></div>
 	<div><a href="a.html"><label>Personal Resume Profiles</label></a></div>
 	<div><a href="a.html"><label>Send Appointment Letter </label></a></div>
 	<div><a href="a.html"><label>Performance Summery Report</label></a></div>
