--- a/HTML5Application/company/resume_view.html
+++ b/HTML5Application/company/resume_view.html
@@ -6,14 +6,14 @@
 <meta charset="utf-8">
 <meta name="description" content="HTML5 registration form">
 <meta name="author" content="Shahed Ruhi">	
-<title>Trainee Attendance Report</title>
+<title>Personal Resume Profiles of all the Trainees</title>
 <link rel="stylesheet" type="text/css" href="css/form.css" />
 
 </head>
  
 <body>
 <img alt="header" src="image/header.jpg" />
-<h3>FTFL Trainee Attendance Report</h3>
+<h3>Personal Resume Profiles of all the Trainees</h3>
 <table style= "float:right; font-size:20px" border="1" >
 <tr>
 <td>
@@ -61,79 +61,29 @@
 <tr>
 <td style="text-align: center;"<b>Sl.</b></td>
 <td style="text-align: center;"><b>Name</b></td>
-<td style="text-align: center;"><b>Total Class</b></td>
-<td style="text-align: center;"><b>Not Attended</b></td>
-<td style="text-align: center;"><b>Late In</b></td>
-<td style="text-align: center;"><b>Early Leave</b></td>
-<td style="text-align: center;"><b>Permitted Vacation</b></td>
-<td style="text-align: center;"><b>Total Attented</b></td>
+<td style="text-align: center;"><b>Educational Qualifications</b></td>
 </tr>
  
 <tr>
 <td>1</td>
 <td>Towfiqur Rahamn</td>
-<td>50</td>
-<td>0</td>
-<td>0</td>
-<td>0</td>
-<td>0</td>
-<td>50</td>
-
+<td>Bsc. in CSE</td>
+<td><a href="">View the Personal Resume Profile</td>
 
 <tr>
 <td>2</td>
-<td>M.R. Zahid</td>
-<td>50</td>
-<td>2</td>
-<td>1</td>
-<td>3</td>
-<td>1</td>
-<td>48</td>
-</tr>
+<td>Zahid Hasan</td>
+<td>Diploma in CS</td>
+<td><a href="">View the Personal Resume Profile</td>
 
 <tr>
 <td>3</td>
-<td>M.R. Rana</td>
-<td>50</td>
-<td>2</td>
-<td>1</td>
-<td>3</td>
-<td>1</td>
-<td>48</td>
-</tr>
+<td>Zoaibada Salma</td>
+<td>Honrs. in Law</td>
+<td><a href="">View the Personal Resume Profile</td>
 
-<tr>
-<td>4</td>
-<td>Rezoan Ahmed</td>
-<td>50</td>
-<td>2</td>
-<td>1</td>
-<td>3</td>
-<td>1</td>
-<td>48</td>
-</tr>
 
-<tr>
-<td>5</td>
-<td>Shahed Ruhi</td>
-<td>50</td>
-<td>2</td>
-<td>6</td>
-<td>3</td>
-<td>6</td>
-<td>42</td>
-</tr>
 
-<tr>
-<td>6</td>
-<td>Hasan Ruhi</td>
-<td>50</td>
-<td>2</td>
-<td>6</td>
-<td>3</td>
-<td>1</td>
-<td>44</td>
-</tr>
 
 
 
@@ -156,4 +106,9 @@
 </form>
  
 </body>
+
+<br>
+<br>
+<br>
+<br>
 </html>
