--- a/HTML5Application/company/exam_result.html
+++ b/HTML5Application/company/exam_result.html
@@ -14,6 +14,19 @@
 <body>
 <img alt="header" src="image/header.jpg" />
 <h3>FTFL Trainee Exam Result</h3>
+<table style= "float:right; font-size:20px" border="1" >
+<tr>
+<td>
+<a href="company_profile.html" ><label>COMPANY PROFILE SETTING</label></a><br>
+<a href="a.html"><label>SIGN OUT</label></a><br>
+<a href="company_dashboard.html"><label>Dashboard</label></a>
+</td>
+</tr>
+</table>
+<br>
+<br>
+<br>
+<br>
 
 <form>
  
