--- a/HTML5Application/company/vacency_board.html
+++ b/HTML5Application/company/vacency_board.html
@@ -19,7 +19,8 @@
 <tr>
 <td>
 <a href="company_profile.html" ><label>COMPANY PROFILE SETTING</label></a><br>
-<a href="a.html"><label>SIGN OUT</label></a>
+<a href="a.html"><label>SIGN OUT</label></a><br>
+<a href="company_dashboard.html"><label>Dashboard</label></a>
 </td>
 </tr>
 </table>
