Send appoinment letter page

--- a/HTML5Application/company/send_appoinment_letter.html
+++ b/HTML5Application/company/send_appoinment_letter.html
@@ -28,7 +28,7 @@
 <br>
 <br>
 
-<form>
+<form action="company_dashboard.html">
  
 <table class="center">
 
@@ -47,40 +47,52 @@
 	</select>		
 </td>
 </tr>
- 
- 
 
- 
-<!-- EDUCATIONAL Qualification-->
 <tr>
-<td>Attendance Report: <br /><br /><br /><br /><br /><br /><br /></td>
- 
-<td>
-<table>
- 
-<tr>
-<td style="text-align: center;"<b>Sl.</b></td>
-<td style="text-align: center;"><b>Name</b></td>
-<td style="text-align: center;"><b>Educational Qualifications</b></td>
+<td>Select ID</td>
+<td>	
+	<select name="divisions">
+		<option>ITS - 2014000023</option>
+		<option>ITSS - 2014004500</option>
+		<option>ITES - 2014001533</option>
+		<option>ITS - 2014000487</option>
+		<option>MGT - 2014012334</option>
+	</select>		
+</td>
 </tr>
+
+<tr>
+<td>Select Name</td>
+<td>	
+	<select name="divisions">
+		<option>Zahid Hasan</option>
+		<option>Shahed Ruhi</option>
+		<option>Towfiqur Rhaman</option>
+		<option>Hasan Doha</option>
+		<option>Mothaer Hossain</option>
+	</select>		
+</td>
+</tr>
+
+
+
+<tr>
+<td>Your Appoinment Letter: </td>
+<td>
+<textarea rows="10" cols="30" name="textArea" placeholder="Dear Trainee...."></textarea>
+</td>
+</tr>
+  
  
 <tr>
-<td>1</td>
-<td>Towfiqur Rahamn</td>
-<td>Bsc. in CSE</td>
-<td><a href="resume.html">View the Personal Resume Profile</td>
+<td colspan="2" style="text-align: center;">
+<input type="submit" value="Send Appoinment Letter">
+<input type="reset" value="Reset">
+</td>
+</tr>
 
-<tr>
-<td>2</td>
-<td>Zahid Hasan</td>
-<td>Diploma in CS</td>
-<td><a href="">View the Personal Resume Profile</td>
+ 
 
-<tr>
-<td>3</td>
-<td>Zoaibada Salma</td>
-<td>Honrs. in Law</td>
-<td><a href="">View the Personal Resume Profile</td>
 
 
 
