--- a/HTML5Application/company/company_dashboard.html
+++ b/HTML5Application/company/company_dashboard.html
@@ -42,7 +42,7 @@
 	<div><a href="exam_result.html"><label>Exam Result Reports</label></a></div>
 	<div><a href="attemdance_report.html"><label>Attendance Records</label></a></div>
 	<div><a href="resume_view.html"><label>Personal Resume Profiles</label></a></div>
-	<div><a href="a.html"><label>Send Appointment Letter </label></a></div>
+	<div><a href="send_appoinment_letter.html"><label>Send Appointment Letter </label></a></div>
 	<div><a href="a.html"><label>Performance Summery Report</label></a></div>
 	<div><a href="a.html"><label>Merit List</label></a></div>
 	<div><a href="a.html"><label>Recruited FTFL’s Attendance Report </label></a></div>
