resume file add

--- a/HTML5Application/company/resume_view.html
+++ b/HTML5Application/company/resume_view.html
@@ -74,13 +74,13 @@
 <td>2</td>
 <td>Zahid Hasan</td>
 <td>Diploma in CS</td>
-<td><a href="">View the Personal Resume Profile</td>
+<td><a href="resume.html">View the Personal Resume Profile</td>
 
 <tr>
 <td>3</td>
 <td>Zoaibada Salma</td>
 <td>Honrs. in Law</td>
-<td><a href="">View the Personal Resume Profile</td>
+<td><a href="resume.html">View the Personal Resume Profile</td>
 
 
 
