Course summary page completed

--- a/HTML5Application/company/company_dashboard.html
+++ b/HTML5Application/company/company_dashboard.html
@@ -59,7 +59,7 @@
 <fieldset>
 	<legend>Other Features</legend>
 	
-	<div><a href="a.html"><label>Summary Report Of the Courses</label></a></div>
+	<div><a href="cources.html"><label>Summary Report Of the Courses</label></a></div>
 	<div><a href="noticeboard.html"><label>Notice Board</label></a></div>
 	<div><a href="vacency_board.html"><label>Job Vacency Board</label></a></div>
 	<div><a href="hrdemand.html"><label>Post My Human Resouces Demand</label></a></div>
