Stipend Page completed

--- a/HTML5Application/company/company_dashboard.html
+++ b/HTML5Application/company/company_dashboard.html
@@ -44,10 +44,9 @@
 	<div><a href="resume_view.html"><label>Personal Resume Profiles</label></a></div>
 	<div><a href="send_appoinment_letter.html"><label>Send Appointment Letter </label></a></div>
 	<div><a href="a.html"><label>Performance Summery Report</label></a></div>
-	<div><a href="a.html"><label>Merit List</label></a></div>
 	<div><a href="a.html"><label>Recruited FTFL’s Attendance Report </label></a></div>
 	<div><a href="a.html"><label>Rcruited FTFL’s Monthly Progress Report</label></a></div>
-	<div><a href="a.html"><label>Recruited FTFL’s Stipend</label></a></div>
+	<div><a href="stipend.html"><label>Recruited FTFL’s Stipend</label></a></div>
 	
 </fieldset>	
 </td>
@@ -104,4 +103,8 @@
 
  
 </body>
+<br>
+<br>
+<br>
+<br>
 </html>
