--- a/HTML5Application/company/company_dashboard.html
+++ b/HTML5Application/company/company_dashboard.html
@@ -20,7 +20,7 @@
 <tr>
 <td>
 <a href="company_profile.html" ><label>COMPANY PROFILE SETTING</label></a><br>
-<a href="a.html"><label>SIGN OUT</label></a>
+<a href="signin.html"><label>SIGN OUT</label></a>
 </td>
 </tr>
 </table>
@@ -44,8 +44,7 @@
 	<div><a href="resume_view.html"><label>Personal Resume Profiles</label></a></div>
 	<div><a href="send_appoinment_letter.html"><label>Send Appointment Letter </label></a></div>
 	<div><a href="performance_summary.html"><label>Performance Summery Report</label></a></div>
-	<div><a href="a.html"><label>Recruited FTFL’s Attendance Report </label></a></div>
-	<div><a href="a.html"><label>Rcruited FTFL’s Monthly Progress Report</label></a></div>
+	<div><a href="attemdance_internship.html"><label>Recruited FTFL’s Attendance Report </label></a></div>
 	<div><a href="stipend.html"><label>Recruited FTFL’s Stipend</label></a></div>
 	
 </fieldset>	
