--- a/HTML5Application/company/hrdemand.html
+++ b/HTML5Application/company/hrdemand.html
@@ -19,7 +19,7 @@
 <tr>
 <td>
 <a href="company_profile.html" ><label>COMPANY PROFILE SETTING</label></a><br>
-<a href="a.html"><label>SIGN OUT</label></a><br>
+<a href="signin.html"><label>SIGN OUT</label></a><br>
 <a href="company_dashboard.html"><label>Dashboard</label></a>
 </td>
 </tr>
