add 3 user page in company

--- a/HTML5Application/FTFL HTML MockUP/homepage.html
+++ b/HTML5Application/FTFL HTML MockUP/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Trainer Dashboard - FTFL Management System</title>
+        <title>FTFL Management System</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link type="text/css" href="css/style.css" rel="stylesheet">
     </head>
@@ -28,7 +28,7 @@
             <div class="hline"></div>
             <div id="menu">
                 <ul>
-                    <li><a href="signin.html">Home</a></li>
+                    <li><a href="homepage.html">Home</a></li>
                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="newsnevents.html">News/Events</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -45,15 +45,10 @@
             </div>
             <div class="hline"></div>
             <div id="describe">
-                <h3><b>TRAINER DASHBOARD</b></h3>
+                <h3><b>HOME PAGE</b></h3>
                 <ul>
-                    <li><a href="trainer_profile.html">Profile</a></li>
-                    <li><a href="assigned_students_list.html">Students'List</a></li>
-                    <li><a href="attendance.html">Attendance</a></li>
-                    <li><a href="#">Training Calender</a></li>
-                    <li><a href="result.html">Result</a></li>
-                    <li><a href="resource.html">Resources</a></li>
-                    <li><a href="get_connected.html">Get Connected</a></li>
+                    <li><a href="signin.html">SIGN IN PAGE</a></li>
+                    
                     <!-- <li><a href="#">Settings</a></li> -->
                 </ul>
 
