--- a/HTML5Application/FTFL HTML MockUP/signin.html
+++ b/HTML5Application/FTFL HTML MockUP/signin.html
@@ -48,12 +48,12 @@
                 <h3><b>LOG IN & SIGN UP PAGE</b></h3>
                 <ul>
                     
-                    <li><a href="fg.html">LOG IN AS GRADUATE</a></li>
-                    <li><a href="registration_form.html">SIGN IN AS GRADUATE</a></li>
-                    <li><a href="company_dashboard.html">LOG IN AS COMPANY</a></li>
-                    <li><a href="company_reg.html">SIGN IN AS COMPANY</a></li>
                     <li><a href="index.html">LOG IN AS TRAINER</a></li>
+                    <li><a href="company_dashboard.html">LOG IN AS COMPANY</a></li>
+                    <li><a href="company_reg.html">SIGN IN AS COMPANY</a></li>     
                     <li><a href="dashboard.html">LOG IN AS INSTITUTE</a></li>
+                    <li><a href="registration_form.html">SIGN IN AS GRADUATE</a></li>
+                    <li><a href="">LOG IN AS GRADUATE</a></li>
                     <!-- <li><a href="#">Settings</a></li> -->
                 </ul>
 
