--- a/HTML5Application/FTFL HTML MockUP/registration_form.html
+++ b/HTML5Application/FTFL HTML MockUP/registration_form.html
@@ -15,7 +15,7 @@
 <img alt="header" src="image/header.jpg" />
 <h3>FTFL STUDENT REGISTRATION FORM</h3>
 <h2> PLEASE FILL UP AL THE REQUIRED INFORMATION.</h2>
-<form action="form.php" method="POST">
+<form action="signin.html" method="GET">
  
 <table class="center">
 
