Admin user pertly

--- a/HTML5Application/FTFL HTML MockUP/signin.html
+++ b/HTML5Application/FTFL HTML MockUP/signin.html
@@ -53,7 +53,7 @@
                     <li><a href="company_reg.html">SIGN IN AS COMPANY</a></li>     
                     <li><a href="dashboard.html">LOG IN AS INSTITUTE</a></li>
                     <li><a href="registration_form.html">SIGN IN AS GRADUATE</a></li>
-                    <li><a href="">LOG IN AS GRADUATE</a></li>
+                    <li><a href="fgdashboard.html">LOG IN AS GRADUATE</a></li>
                     <!-- <li><a href="#">Settings</a></li> -->
                 </ul>
 
