--- a/Java Script/ajax.html
+++ b/Java Script/ajax.html
@@ -18,10 +18,16 @@ xmlhttp.onreadystatechange=function()
   if (xmlhttp.readyState==4 && xmlhttp.status==200)
     {
     //document.getElementById("myDiv").innerHTML=xmlhttp.responseText;
-    alert(xmlhttp.responseText);
+    //alert(xmlhttp.responseText);
+    var jsonDataAsText  = xmlhttp.responseText;
+    //var jsonData = eval("(" + jsonDataAsText + ")");
+    var jsonData = JSON.parse(jsonDataAsText);
+
+    alert(typeof(jsonData));
+
     }
   }
-xmlhttp.open("GET","ajax_info.txt",true);
+xmlhttp.open("GET","country.txt",true);
 xmlhttp.send();
 }
 </script>
