--- a/Java Script/ajaxjsn.html
+++ b/Java Script/ajaxjsn.html
@@ -54,7 +54,7 @@
             }
         }
 
-        xmlhttp.open("GET","country.txt",true);
+        xmlhttp.open("GET","country.php",true);
         xmlhttp.send();
     }
 
