--- a/Java Script/json.html
+++ b/Java Script/json.html
@@ -5,7 +5,7 @@
 
 function loadData(dataUrl, rootElement, target) {
   var xhr = new XMLHttpRequest();
-  //xhr.overrideMimeType("application/json");
+  xhr.overrideMimeType("application/json");
   xhr.open('GET', dataUrl, true);
 
   xhr.onreadystatechange = function() {
@@ -43,9 +43,6 @@ loadData('country.txt', 'countries', counriesList);
 
 </head>
 <body>
-
-
-select name="state" id="state">
     
   <select name="country" id="counriesList">
     <option value="" selected="selected"> - Country - </option>
