--- a/Java Script/ajaxjsn.html
+++ b/Java Script/ajaxjsn.html
@@ -30,13 +30,13 @@
             {
                 //alert(xmlhttp.responseText);
 
-                var objCountries = JSON.parse(xmlhttp.responseText);
+                //var objCountries = JSON.parse(xmlhttp.responseText);
 
                 //alert(typeof objCountries);
 
-                var options = "<select>";
+                //var options = "<select>";
 
-                var i;
+                /*var i;
 
                 for(i=0;i<objCountries.countries.length;i++)
                 {
@@ -46,15 +46,18 @@
                     options += "<option value='"+objCountries.countries[i].country.country_id+"'>"+objCountries.countries[i].country.country_name+"</option>"
 
                 }
+
                 options += "</select>";
 
                 //alert(options);
                 document.getElementById('demo').innerHTML = options;
+                */
+                document.getElementById("demo").innerHTML=xmlhttp.responseText;
 
             }
         }
 
-        xmlhttp.open("GET","country.php",true);
+        xmlhttp.open("GET","http://www.bikroy.com",true);
         xmlhttp.send();
     }
 
