--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -4,17 +4,19 @@
 <script src="jquery-2.1.1.min.js"></script>
 <script>
 $(document).ready(function(){
-  $("button").click(function(){
+  $("#hide").click(function(){
     $("p").hide();
+  });
+  $("#show").click(function(){
+    $("p").show();
   });
 });
 </script>
 </head>
-
 <body>
-<h2>This is a heading</h2>
-<p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
-<button>Click me</button>
+<p>If you click on the "Hide" button, I will disappear.</p>
+<button id="hide">Hide</button>
+<button id="show">Show</button>
 </body>
 </html>
+
