--- a/jQuery/jspractice.html
+++ b/jQuery/jspractice.html
@@ -1,21 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="jquery-2.1.1.min.js"></script>
+	<title>Working with jQuery</title>
+
+<style>
+    p {
+    margin: 20px 0 0;
+    }
+    b {
+    color: blue;
+    }
+ </style>   	
 </head>
+
 <body>
-<p>If you click on the "Hide" button, I will disappear.</p>
-<button id="hide">Hide</button>
-<button id="show">Show</button>
-</body>
+
+
+    <input id="check1" type="checkbox" checked="checked">
+    <label for="check1" id="iblb">Check me</label>
+    <p></p>
+
+
+
+
+
+<script src="jquery-2.1.1.min.js" type='text/javascript'></script>
 <script>
-$(document).ready(function(){
-  $("#hide").click(function(){
-    $("p").hide();
-  });
-  $("#show").click(function(){
-    $("p").show();
-  });
-});
+    $( "input" )
+    .change(function() {
+    var $input = $( this );
+    $( "p" ).html( ".attr( 'checked' ): " + $input.attr( "checked" ) + "" +
+    ".prop( 'checked' ): " + $input.prop( "checked" ) + "" +
+    ".is( ':checked' ): " + $input.is( ":checked" ) + "" );
+    })
+    .change();
+
+    $(document).ready(function() {
+    		
+    		console.log(	$('#iblb').
+    						attr('for','ruhi').
+    						css({
+    							'background-color':'red',
+    							'display':'block',
+    							'width':'300px
+    							})
+    					
+    				   );
+
+
+    });
+
+
 </script>
+</body>
 </html>
