--- a/bootstarp/index.html
+++ b/bootstarp/index.html
@@ -35,7 +35,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </td>
     <td>
-      <img alt="gorzonbanner" width=75% align="center" src="image/banner.jpg" />
+      <img alt="gorzonbanner" class="img-responsive" alt="Responsive image" width=75% align="center src="image/banner.jpg" />
     </td>
   </tr>
   <tr>
