create Bootstrap button

--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Untitled Document</title>
+<title>Bootstarp Practices</title>
 <link href="css/bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
-<i class="glyphicon glyphicon-home"><br>Home</i>
+<!--<i class="glyphicon glyphicon-home"><br>Home</i>-->
+<div class="btn-group">
+  	<button type="button" class="btn btn-default">Left</button>
+  	<button type="button" class="btn btn-default">Middle</button>
+  	<button type="button" class="btn btn-default">Right</button>
+</div>
+
 </body>
 </html>
