--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -14,5 +14,23 @@
   	<button type="button" class="btn btn-default">Right</button>
 </div>
 
+<div class="btn-group-vertical">
+    <button class="btn btn-default" type="button">Button</button>
+    <button class="btn btn-default" type="button">Button</button>
+    <button class="btn btn-default" type="button">Button</button>
+    <div class="btn-group">
+        <button id="btnGroupVerticalDrop1" class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button">
+            Dropdown
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="btnGroupVerticalDrop1" role="menu">
+            <li><a href="#">Dropdown link</a></li>
+            <li><a href="#">Dropdown link</a></li>
+        </ul>
+    </div>
+    <button class="btn btn-default" type="button">Button</button>
+</div>
+
+
 </body>
 </html>
