create Bread Crumb

--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -32,7 +32,7 @@
 
   <body>
 
-<i class="glyphicon glyphicon-home"><br>Home</i>
+<!--<i class="glyphicon glyphicon-home"><br>Home</i>
 
 <div class="btn-group">
   	<button type="button" class="btn btn-default">Left</button>
@@ -85,6 +85,7 @@
 
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
+<!--
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Toggle navigation</span>
@@ -96,6 +97,8 @@
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
+
+<!-- 
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Link</a></li>
@@ -130,8 +133,15 @@
       </li>
     </ul>
   </div><!-- /.navbar-collapse -->
+  <!--
 </nav>
+-->
 
+<ol class="breadcrumb">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Library</a></li>
+            <li class="active">Data</li>
+        </ol>
 
 
 
