created Panel & Accordion

--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -153,6 +153,10 @@
   <li><a href="#">&raquo;</a></li>
 </ul>	
 
+<ul class="pager">
+  <li><a href="#">Previous</a></li>
+  <li><a href="#">Next</a></li>
+</ul>
 
 
     <!-- Bootstrap core JavaScript
