--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -136,7 +136,7 @@
   <!--
 </nav>
 -->
-
+<!--
 <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
             <li><a href="#">Library</a></li>
@@ -173,7 +173,21 @@
     </form>
   </div>
 </div>
-
+-->
+<form>
+    <div class="form-group">
+        <label for="inputEmail">Email</label>
+        <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+    </div>
+    <div class="form-group">
+        <label for="inputPassword">Password</label>
+        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+    </div>
+    <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
 
 
     <!-- Bootstrap core JavaScript
