created Supported Form Controls

--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -299,6 +299,13 @@
    <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
+<form role="form">
+  <div class="form-group">
+    <label for="name">Label</label>
+    <input type="text" class="form-control" placeholder="Text input">
+  </div>
+ </form>
+
 
 
     </div><!-- /.container -->
