--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -306,6 +306,13 @@
   </div>
  </form>
 
+ <form role="form">
+  <div class="form-group">
+    <label for="name">Text Area</label>
+    <textarea class="form-control" rows="3"></textarea>
+  </div>
+</form>
+
 
 
     </div><!-- /.container -->
