created Chekbox & Radios

--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -279,7 +279,7 @@
 
     </form>
 -->
-
+<!--
 <form role="form">
    <div class="form-group">
       <label for="name">Name</label>
@@ -312,7 +312,48 @@
     <textarea class="form-control" rows="3"></textarea>
   </div>
 </form>
+-->
+<label for="name">Example of Default Checkbox and radio button </label>
+<div class="checkbox">
+   <label><input type="checkbox" value="">Option 1</label>
+</div>
+<div class="checkbox">
+   <label><input type="checkbox" value="">Option 2</label>
+</div>
 
+<div class="radio">
+   <label>
+      <input type="radio" name="optionsRadios" id="optionsRadios1" 
+         value="option1" checked> Option 1
+   </label>
+</div>
+<div class="radio">
+   <label>
+      <input type="radio" name="optionsRadios" id="optionsRadios2" 
+         value="option2">
+         Option 2 - selecting it will deselect option 1
+   </label>
+</div>
+<label for="name">Example of Inline Checkbox and radio button </label>
+<div>
+   <label class="checkbox-inline">
+      <input type="checkbox" id="inlineCheckbox1" value="option1"> Option 1
+   </label>
+   <label class="checkbox-inline">
+      <input type="checkbox" id="inlineCheckbox2" value="option2"> Option 2
+   </label>
+   <label class="checkbox-inline">
+      <input type="checkbox" id="inlineCheckbox3" value="option3"> Option 3
+   </label>
+   <label class="checkbox-inline">
+      <input type="radio" name="optionsRadiosinline" id="optionsRadios3" 
+         value="option1" checked> Option 1
+   </label>
+   <label class="checkbox-inline">
+      <input type="radio" name="optionsRadiosinline" id="optionsRadios4" 
+         value="option2"> Option 2
+   </label>
+</div>
 
 
     </div><!-- /.container -->
