--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -355,6 +355,28 @@
    </label>
 </div>
 
+<form role="form">
+   <div class="form-group">
+      <label for="name">Select list</label>
+      <select class="form-control">
+         <option>1</option>
+         <option>2</option>
+         <option>3</option>
+         <option>4</option>
+         <option>5</option>
+      </select>
+
+      <label for="name">Mutiple Select list</label>
+      <select multiple class="form-control">
+         <option>1</option>
+         <option>2</option>
+         <option>3</option>
+         <option>4</option>
+         <option>5</option>
+      </select>
+   </div>
+</form>
+
 
     </div><!-- /.container -->
 
