--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -313,6 +313,8 @@
   </div>
 </form>
 -->
+
+<!--
 <label for="name">Example of Default Checkbox and radio button </label>
 <div class="checkbox">
    <label><input type="checkbox" value="">Option 1</label>
@@ -375,6 +377,23 @@
          <option>5</option>
       </select>
    </div>
+</form>
+-->
+
+<form class="form-horizontal" role="form">
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Email</label>
+    <div class="col-sm-10">
+      <p class="form-control-static">email@example.com</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword" 
+         placeholder="Password">
+    </div>
+  </div>
 </form>
 
 
