--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -379,7 +379,7 @@
    </div>
 </form>
 -->
-
+<!--
 <form class="form-horizontal" role="form">
   <div class="form-group">
     <label class="col-sm-2 control-label">Email</label>
@@ -459,7 +459,52 @@
       </div>
    </div>
 </form>
+-->
 
+<form role="form">
+   <div class="form-group">
+      <input class="form-control input-lg" type="text" 
+         placeholder=".input-lg">
+   </div>
+
+   <div class="form-group">
+      <input class="form-control" type="text" placeholder="Default input">
+   </div>
+
+   <div class="form-group">
+      <input class="form-control input-sm" type="text" 
+         placeholder=".input-sm">
+   </div>
+   <div class="form-group">
+   </div>
+   <div class="form-group">
+      <select class="form-control input-lg">
+         <option value="">.input-lg</option>
+      </select>
+   </div>
+   <div class="form-group">
+      <select class="form-control">
+         <option value="">Default select</option>
+      </select>
+   </div>
+   <div class="form-group">
+      <select class="form-control input-sm">
+         <option value="">.input-sm</option>
+      </select>
+   </div>
+
+   <div class="row">
+      <div class="col-lg-2">
+         <input type="text" class="form-control" placeholder=".col-lg-2">
+      </div>
+      <div class="col-lg-3">
+         <input type="text" class="form-control" placeholder=".col-lg-3">
+      </div>
+      <div class="col-lg-4">
+         <input type="text" class="form-control" placeholder=".col-lg-4">
+      </div>
+   </div>
+</form>
 
 
     </div><!-- /.container -->
