created Help Text Form

--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -506,6 +506,13 @@
    </div>
 </form>
 
+<form role="form">
+   <span>Example of Help Text</span>
+   <input class="form-control" type="text" placeholder="">
+   <span class="help-block">A longer block of help text that
+   breaks onto a new line and may extend beyond one line.</span>
+</form>
+
 
     </div><!-- /.container -->
 
