--- a/bootstarp/practice.html
+++ b/bootstarp/practice.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html>
+<head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
+<!--    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">-->
 
     <title>Bootstarp Practices</title>
 
@@ -460,7 +461,7 @@
    </div>
 </form>
 -->
-
+<!--
 <form role="form">
    <div class="form-group">
       <input class="form-control input-lg" type="text" 
@@ -512,6 +513,39 @@
    <span class="help-block">A longer block of help text that
    breaks onto a new line and may extend beyond one line.</span>
 </form>
+-->
+
+<div id="myCarousel" class="carousel slide"> 
+  <!-- Carousel indicators --> 
+  <ol class="carousel-indicators"> 
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li> 
+    <li data-target="#myCarousel" data-slide-to="1">
+    </li> 
+    <li data-target="#myCarousel" data-slide-to="2">
+    </li> 
+  </ol> <!-- Carousel items --> 
+  <div class="carousel-inner"> 
+    <div class="item active"> 
+      <img src="image/header.jpg" alt="First slide"> 
+      <div class="carousel-caption">
+        This Caption 1
+      </div> 
+    </div> 
+    <div class="item"> 
+      <img src="image/header.jpg" alt="Second slide"> 
+      <div class="carousel-caption">
+        This Caption 2
+      </div> 
+    </div> 
+    <div class="item"> 
+      <img src="image/header.jpg" alt="Third slide"> 
+      <div class="carousel-caption">
+        This Caption 3</div> 
+      </div> 
+    </div> <!-- Carousel nav --> 
+    <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a> 
+    <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a> 
+  </div>
 
 
     </div><!-- /.container -->
