completed responsive media query in CSS

--- a/CSS/responsiveimage.html
+++ b/CSS/responsiveimage.html
@@ -3,25 +3,21 @@
 <head>
 <style>
 
-@media only screen and (min-width:320px)  
+@media only screen and (max-width:500px)  
 { 
 	body{background-color:blue} 
 }
 
-@media only screen and (min-width:768px)  
+@media only screen and (min-width:501px) and (max-width:800px)  
 { 
 	body{background-color:green}  
 }
 
-@media only screen and (min-width:1024px) 
+@media only screen and (min-width:801px) 
 { 
 	body{background-color:red} 
 
-@media only screen and (min-width:1900px) 
-{ 
-	body{background-color:black}  
 }
-
 </style>
 </head>
 <body>
