add admin HTML mock up to company

--- a/HTML5Application/FTFL HTML MockUP/signin.html
+++ b/HTML5Application/FTFL HTML MockUP/signin.html
@@ -54,6 +54,7 @@
                     <li><a href="dashboard.html">LOG IN AS INSTITUTE</a></li>
                     <li><a href="registration_form.html">SIGN IN AS GRADUATE</a></li>
                     <li><a href="fgdashboard.html">LOG IN AS GRADUATE</a></li>
+                    <li><a href="AdminDashboard.html">LOG IN AS ADMIN</a></li>
                     <!-- <li><a href="#">Settings</a></li> -->
                 </ul>
 
