10-08-2014 class exercise 1,2,3a,3b completed

--- a/PHPcode/classe_exercise_10-08-2014/select_course.html
+++ b/PHPcode/classe_exercise_10-08-2014/select_course.html
@@ -6,14 +6,13 @@
  
 <body>
 
-<h3>FTFL STUDENT INSERT FORM</h3>
+<h3>FTFL Course Select</h3>
 
 
-<form action="student_insert.php" method="POST">
+<form action="course_find.php" method="POST">
 	<fieldset>
 		<legend>FTFL Batch</legend>
-		<br>
-		<br>
+		
 		<label>
 			<span>Student Name</span>
 			<input type="text" name="student_name"/>
@@ -27,14 +26,6 @@
 
 </form>
  
-<label>
-<span><a href="course_input.html">course</span></a>
-</label>
-<br>
-<br>
-<label>
-<span><a href="select_course.html">select course</span></a>
-</label>
 
  
 </body>
