modify the code for insert multiple data into multiple tables

--- a/PHPcode/classe_exercise_10-08-2014/index.html
+++ b/PHPcode/classe_exercise_10-08-2014/index.html
@@ -25,18 +25,13 @@
 		<label>
 			<span>Select Course</span>
 			<select name="course_title">
-			<option value="Laravel">Laravel</option>
-			<option value="Photoshop">Photoshop</option>
-			<option value="Unity 3D">Unity 3D</option>
-			<option value="ASP .Net">ASP .Net</option>
+			<option value="Laravel">LARAVEL</option>
+			<option value="Photoshop">PHOTOSHOP</option>
+			<option value="Unity 3D">UNITY 3D</option>
+			<option value="Laravel">ITES</option>
+			<option value="Photoshop">MGMT</option>
+			<option value="ASP .Net">ASP .NET</option>
 		</select>
-		</label>
-		<br>
-		<br>
-
-		<label>
-			<span>Course Code</span>
-			<input type="text" name="course_code"/>
 		</label>
 		<br>
 		<br>
