Make index page

--- a/PHPcode/My_website/index.html.html
+++ b/PHPcode/My_website/index.html.html
@@ -105,7 +105,7 @@
                             <div class="list-group">
                                 <a href="#" class="list-group-item list-group-item-success"><b>My Assignments</b></a>
                                 <a href="#" class="list-group-item list-group-item-info"><b>My Resume</b></a>
-                                <a href="https://github.com/shahedruhi/" class="list-group-item list-group-item-warning" target="_blank"><b>My Github</b></a>
+                                <a href="https://github.com/shahedruhi/" class="list-group-item list-group-item-warning"><b>My Github</b></a>
                             </div>
 
                         </div>
